Was niet vergeten

--- a/adventure.html
+++ b/adventure.html
@@ -14,7 +14,7 @@
       	<button id="button2" type="button">Keuze 2</button>
       	<button id="button3" type="button">Keuze 3</button>
       </div>
-      <img id="inventoryItem" src="assets/img/Ding ding ding.png" alt="inventory item">
+      <img id="inventoryItem" src="#" alt="inventory item">
   </div>
   <script src="assets/js/adventure.js"></script>
  </body>
